# SLAM14Lectures

./: LICENSE  README.md  homework1.md  homework2.md  homework3.md  homework4.md  homework5.md  homework6.md  homework7.md
1/: CMakeLists.txt  hello.cpp  hello.h  myslam.yaml  myvideo.cpp  useHello.cpp
2/: CMakeLists.txt  main.cpp
3/: CMakeLists.txt  draw_trajectory.cpp  rmse.cpp
4/: CMakeLists.txt  disparity.cpp  gaussnewton.cpp  undistort_image.cpp
5/: CMakeCache.txt  CMakeLists.txt  GN-BA.cpp  align_trajectory.cpp  computeORB.cpp
6/: CMakeLists.txt  disparity.cpp  optical_flow.cpp
7/: CMakeCache.txt  CMakeLists.txt  directBA.cpp  final.ply  homework7.md  initial.ply
book/: 3.李群与李代数.pptx  4.相机模型与非线性优化.pptx  5.特征点法视觉里程计.pptx
project/: README.md
project/src/: Direct.cpp  DirectBA.cpp  DirectSolver.cpp  System.cpp
project/src/CNNMatcher/client/: netVlad.grpc.pb.cc  netVlad.grpc.pb.h  netVlad.pb.cc  netVlad.pb.h  netVlad_client.cpp
project/src/CNNMatcher/proto/: netVlad.proto  setup_proto.bat
project/src/CNNMatcher/server/: featureCluster.py  netVlad_pb2.py  netVlad_pb2_grpc.py  netVlad_server.py  utils.py  vggVlad.py
